fix: use Android-compatible Files APIs in PeerTrustStore
Agent-Logs-Url: https://github.com/zhouyitian389-max/nfcgate/sessions/188684f9-e789-4932-9a40-879ea665130b

Co-authored-by: zhouyitian389-max <285470584+zhouyitian389-max@users.noreply.github.com>